GNN_branch/MLIR_graphs/logs/spcl_example_05.log
mlir_graph_gen.py: error: cgeist failed while translating the kernel.
Command: /home/elvouvali/tools/Polygeist/build-mailohls-assertions/bin/cgeist Example5_Reordered.cpp -function=MatrixMultiplication -S -O0 -scal-rep=0 -print-debug-info -memref-fullrank -raise-scf-to-affine -o /tmp/mailohls_mlir_nfjbpko3/Example5_Reordered.hls.mlir
Diagnostics:
Example5_Reordered.cpp:3:17: error: declaration of 'MatrixMultiplication' has a different language linkage
    3 | extern "C" void MatrixMultiplication(const double A[], const double B[], double C[]) {
      |                 ^
./Example5.h:7:6: note: previous declaration is here
    7 | void MatrixMultiplication(const double A[], const double B[], double C[]);
      |      ^
